added some more content

--- a/index.html
+++ b/index.html
@@ -1,147 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="flipkartdemo.css" />
+		<link rel="icon" href="/images/Flipkart-Emblem.png" type="icon" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
+		<title>Flipkart</title>
+	</head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="flipkartdemo.css">
-  <link rel="icon" href="/images/Flipkart-Emblem.png" type="icon">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-  <title>Flipkart</title>
-</head>
+	<body>
+		<nav>
+			<section class="main-menu">
+				<ul class="main-nav-menu">
+					<li class="nav-logo">
+						<img src="/images/logo.png" alt="" class="logo-img" />
+						<div class="cta">Explore <span>Plus</span> <img src="/images/pluslogo.png" alt="" /></div>
+					</li>
+					<li>
+						<div class="search-box">
+							<input type="text" placeholder="Search for products, brands and more" />
+							<div class="search-icon-box"><i class="fa fa-search"></i></div>
+						</div>
+					</li>
+					<li>
+						<div class="login-button">Login</div>
+					</li>
+					<li>
+						<div class="nav-seller">Become a Seller</div>
+					</li>
+					<li>
+						<div class="nav-more">
+							<p>More <i class="fa fa-angle-down"></i></p>
+						</div>
+					</li>
+					<li>
+						<div class="cart"><i class="fa fa-cart-shopping"></i> Cart</div>
+					</li>
+				</ul>
+			</section>
+			<section class="sub-menu">
+				<ul class="sub-menu-nav">
+					<li>Eletronics <i class="fa fa-angle-down"></i></li>
+					<li>TVs & Appliances <i class="fa fa-angle-down"></i></li>
+					<li>Men <i class="fa fa-angle-down"></i></li>
+					<li>Women <i class="fa fa-angle-down"></i></li>
+					<li>Baby & Kids <i class="fa fa-angle-down"></i></li>
+					<li>Home & Furniture <i class="fa fa-angle-down"></i></li>
+					<li>Sports, Book & More <i class="fa fa-angle-down"></i></li>
+					<li>Flights</li>
+					<li>Offer Zone</li>
+				</ul>
+			</section>
+		</nav>
+		<section class="content-body">
+			<div class="filter-box">
+				<ul class="filter-menu">
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+				</ul>
+			</div>
+			<div>
+				<ul class="prod-box">
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+				</ul>
+				<div class="pagnation">
+          <p>Page 1 of 28</p>
+          <div class="pg-number">1 2 3 4 5 6 7 8 9 10 <span class="bl-txt">NEXT</span></div>
+          <p> </p>  
 
-<body>
-  <nav>
-    <section class="main-menu">
-
-      <ul class="main-nav-menu">
-        <li class="nav-logo">
-          <img src="/images/logo.png" alt="" class="logo-img">
-          <div class="cta">Explore <span>Plus</span> <img src="/images/pluslogo.png" alt=""></div>
-        </li>
-        <li>
-          <div class="search-box">
-            <input type="text" placeholder="Search for products, brands and more">
-            <div class="search-icon-box"><i class="fa fa-search"></i></div>
-          </div>
-        </li>
-        <li>
-          <div class="login-button">
-            Login
-          </div>
-        </li>
-        <li>
-          <div class="nav-seller">
-            Become a Seller
-          </div>
-
-        </li>
-        <li>
-          <div class="nav-more">
-            <p>More <i class="fa fa-angle-down"></i> </p>
-          </div>
-
-        </li>
-        <li>
-          <div class="cart">
-            <i class="fa fa-cart-shopping"></i> Cart
-          </div>
-
-        </li>
-      </ul>
-
-    </section>
-    <section class="sub-menu">
-      <ul class="sub-menu-nav">
-        <li>Eletronics <i class="fa fa-angle-down"></i></li>
-        <li>TVs & Appliances <i class="fa fa-angle-down"></i></li>
-        <li>Men <i class="fa fa-angle-down"></i></li>
-        <li>Women <i class="fa fa-angle-down"></i></li>
-        <li>Baby & Kids <i class="fa fa-angle-down"></i></li>
-        <li>Home & Furniture <i class="fa fa-angle-down"></i></li>
-        <li>Sports, Book & More <i class="fa fa-angle-down"></i></li>
-        <li>Flights</li>
-        <li>Offer Zone</li>
-      </ul>
-    </section>
-  </nav>
-  <section class="content-body">
-    <div class="filter-box">
-      <ul class="filter-menu">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-    </div>
-    <div>
-     <ul class="prod-box">
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-     </ul>
-     <div class="pagnation">
-      
-     </div>
-     <div class="looking">
-
-     </div>
-    </div>
-  </section>
-  <section class="review-box">
-
-  </section>
-  <footer>
-    <div class="footer-menu">
-footer menu
-    </div>
-    <div class="footer-add">
-
-    </div>
-  </footer>
-
-</body>
-
+        </div>
+				<div class="looking">
+          <div class="quenstion">Did you find what you were looking for?</div>
+          <div class="bttn">Yes</div>
+          <div class="bttn">No</div>
+        </div>
+			</div>
+		</section>
+		<section class="review-box"></section>
+		<footer>
+			<div class="footer-menu">footer menu</div>
+			<div class="footer-add"></div>
+		</footer>
+	</body>
 </html>
