--- a/index.html
+++ b/index.html
@@ -153,7 +153,9 @@
 				</div>
 			</div>
 		</section>
-		<section class="review-box"></section>
+		<section class="review-box">
+			
+		</section>
 		<footer>
 			<div class="footer-menu">
         <div class="about">
