added the review section

--- a/index.html
+++ b/index.html
@@ -165,6 +165,151 @@
 			</div>
 		</section>
 		<section class="review-box">
+			<div class="review-box-head">
+				<p>Review for Popular Mobiles</p>
+			</div>
+
+			<div class="review-box-content">
+				<div class="review-box-img">
+					<img src="/images/-original-imaghkmjtcfc3xgh.webp" alt="">
+				</div>
+				<div class="review-box-product-details">
+					<ul class="review-box-menu">
+						<li style="font-size: 18px; font-weight: 500; text-decoration: none solid rgb(40, 116, 240);">1. REDMI 9 Activ (Carbon Black...</li>
+						<li style="display: flex; ;"><div class="green-rating">4.3 <img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxMyIgaGVpZ2h0PSIxMiI+PHBhdGggZmlsbD0iI0ZGRiIgZD0iTTYuNSA5LjQzOWwtMy42NzQgMi4yMy45NC00LjI2LTMuMjEtMi44ODMgNC4yNTQtLjQwNEw2LjUuMTEybDEuNjkgNC4wMSA0LjI1NC40MDQtMy4yMSAyLjg4Mi45NCA0LjI2eiIvPjwvc3ZnPg==" alt="" style="height: 10px;" /></div> <p style="color: grey; margin-left: 5px; font-weight: 500; font-size: 14px; text-decoration: none solid rgb(135, 135, 135);">3,961 Ratings & 265 Reviews</p></li>
+						<li style="display: flex; "><i class="fa fa-indian-rupee-sign"></i>10,499   <p style="color: grey; padding-left: 10px;">19% off</p></li>
+						<li style="font-size: 14px; font-weight: 400;">6 GB RAM | 128 GB ROM | Expandable Upto 512 GB</li>
+						<li>16.59 cm (6.53 inch) HD+ Display</li>
+						<li></li>
+					</ul>
+
+				</div>
+				<div class="review-box-product-helpfull-review">
+					<ul class="review-box-menu-helpfull-review">
+						<li><p style="color: grey; margin-left: 5px; font-weight: 500; font-size: 14px; text-decoration: none solid rgb(135, 135, 135);">Most Helpful Review</p></li>
+						<li style="display: flex; ;"><div class="green-rating">4<img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxMyIgaGVpZ2h0PSIxMiI+PHBhdGggZmlsbD0iI0ZGRiIgZD0iTTYuNSA5LjQzOWwtMy42NzQgMi4yMy45NC00LjI2LTMuMjEtMi44ODMgNC4yNTQtLjQwNEw2LjUuMTEybDEuNjkgNC4wMSA0LjI1NC40MDQtMy4yMSAyLjg4Mi45NCA0LjI2eiIvPjwvc3ZnPg==" alt="" style="height: 10px;" /></div> <p style="margin-left: 5px;">Nice product</p></li>
+						<li>Front Camera is not good . Battery is good . Sound is awesome.</li>
+						<li>Back camera is good . Look is good . Overall performance is good</li>
+						<li></li>
+					</ul>
+
+				</div>
+				<div class="review-box-product-recent-review">
+					<ul class="review-box-menu-recent-view">
+						<li><p style="color: grey; margin-left: 5px; font-weight: 500; font-size: 14px; text-decoration: none solid rgb(135, 135, 135);">Recent Review</p></li>
+						<li style="display: flex;"><div class="orange-rating">4<img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxMyIgaGVpZ2h0PSIxMiI+PHBhdGggZmlsbD0iI0ZGRiIgZD0iTTYuNSA5LjQzOWwtMy42NzQgMi4yMy45NC00LjI2LTMuMjEtMi44ODMgNC4yNTQtLjQwNEw2LjUuMTEybDEuNjkgNC4wMSA0LjI1NC40MDQtMy4yMSAyLjg4Mi45NCA0LjI2eiIvPjwvc3ZnPg==" alt="" style="height: 10px;" /></div> <p style="margin-left: 5px;">Moderate</p></li>
+						<li>Don't take this camera very poor</li>
+						<li></li>
+					</ul>
+				</div>
+			</div>
+
+			<div class="review-box-content">
+				<div class="review-box-img">
+					<img src="/images/-original-imaghkmjtcfc3xgh.webp" alt="">
+				</div>
+				<div class="review-box-product-details">
+					<ul class="review-box-menu">
+						<li style="font-size: 18px; font-weight: 500; text-decoration: none solid rgb(40, 116, 240);">1. REDMI 9 Activ (Carbon Black...</li>
+						<li style="display: flex; ;"><div class="green-rating">4.3 <img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxMyIgaGVpZ2h0PSIxMiI+PHBhdGggZmlsbD0iI0ZGRiIgZD0iTTYuNSA5LjQzOWwtMy42NzQgMi4yMy45NC00LjI2LTMuMjEtMi44ODMgNC4yNTQtLjQwNEw2LjUuMTEybDEuNjkgNC4wMSA0LjI1NC40MDQtMy4yMSAyLjg4Mi45NCA0LjI2eiIvPjwvc3ZnPg==" alt="" style="height: 10px;" /></div> <p style="color: grey; margin-left: 5px; font-weight: 500; font-size: 14px; text-decoration: none solid rgb(135, 135, 135);">3,961 Ratings & 265 Reviews</p></li>
+						<li style="display: flex; "><i class="fa fa-indian-rupee-sign"></i>10,499   <p style="color: grey; padding-left: 10px;">19% off</p></li>
+						<li style="font-size: 14px; font-weight: 400;">6 GB RAM | 128 GB ROM | Expandable Upto 512 GB</li>
+						<li>16.59 cm (6.53 inch) HD+ Display</li>
+						<li></li>
+					</ul>
+
+				</div>
+				<div class="review-box-product-helpfull-review">
+					<ul class="review-box-menu-helpfull-review">
+						<li><p style="color: grey; margin-left: 5px; font-weight: 500; font-size: 14px; text-decoration: none solid rgb(135, 135, 135);">Most Helpful Review</p></li>
+						<li style="display: flex; ;"><div class="green-rating">4<img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxMyIgaGVpZ2h0PSIxMiI+PHBhdGggZmlsbD0iI0ZGRiIgZD0iTTYuNSA5LjQzOWwtMy42NzQgMi4yMy45NC00LjI2LTMuMjEtMi44ODMgNC4yNTQtLjQwNEw2LjUuMTEybDEuNjkgNC4wMSA0LjI1NC40MDQtMy4yMSAyLjg4Mi45NCA0LjI2eiIvPjwvc3ZnPg==" alt="" style="height: 10px;" /></div> <p style="margin-left: 5px;">Nice product</p></li>
+						<li>Front Camera is not good . Battery is good . Sound is awesome.</li>
+						<li>Back camera is good . Look is good . Overall performance is good</li>
+						<li></li>
+					</ul>
+
+				</div>
+				<div class="review-box-product-recent-review">
+					<ul class="review-box-menu-recent-view">
+						<li><p style="color: grey; margin-left: 5px; font-weight: 500; font-size: 14px; text-decoration: none solid rgb(135, 135, 135);">Recent Review</p></li>
+						<li style="display: flex;"><div class="orange-rating">4<img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxMyIgaGVpZ2h0PSIxMiI+PHBhdGggZmlsbD0iI0ZGRiIgZD0iTTYuNSA5LjQzOWwtMy42NzQgMi4yMy45NC00LjI2LTMuMjEtMi44ODMgNC4yNTQtLjQwNEw2LjUuMTEybDEuNjkgNC4wMSA0LjI1NC40MDQtMy4yMSAyLjg4Mi45NCA0LjI2eiIvPjwvc3ZnPg==" alt="" style="height: 10px;" /></div> <p style="margin-left: 5px;">Moderate</p></li>
+						<li>Don't take this camera very poor</li>
+						<li></li>
+					</ul>
+				</div>
+			</div>
+
+			<div class="review-box-content">
+				<div class="review-box-img">
+					<img src="/images/-original-imaghkmjtcfc3xgh.webp" alt="">
+				</div>
+				<div class="review-box-product-details">
+					<ul class="review-box-menu">
+						<li style="font-size: 18px; font-weight: 500; text-decoration: none solid rgb(40, 116, 240);">1. REDMI 9 Activ (Carbon Black...</li>
+						<li style="display: flex; ;"><div class="green-rating">4.3 <img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxMyIgaGVpZ2h0PSIxMiI+PHBhdGggZmlsbD0iI0ZGRiIgZD0iTTYuNSA5LjQzOWwtMy42NzQgMi4yMy45NC00LjI2LTMuMjEtMi44ODMgNC4yNTQtLjQwNEw2LjUuMTEybDEuNjkgNC4wMSA0LjI1NC40MDQtMy4yMSAyLjg4Mi45NCA0LjI2eiIvPjwvc3ZnPg==" alt="" style="height: 10px;" /></div> <p style="color: grey; margin-left: 5px; font-weight: 500; font-size: 14px; text-decoration: none solid rgb(135, 135, 135);">3,961 Ratings & 265 Reviews</p></li>
+						<li style="display: flex; "><i class="fa fa-indian-rupee-sign"></i>10,499   <p style="color: grey; padding-left: 10px;">19% off</p></li>
+						<li style="font-size: 14px; font-weight: 400;">6 GB RAM | 128 GB ROM | Expandable Upto 512 GB</li>
+						<li>16.59 cm (6.53 inch) HD+ Display</li>
+						<li></li>
+					</ul>
+
+				</div>
+				<div class="review-box-product-helpfull-review">
+					<ul class="review-box-menu-helpfull-review">
+						<li><p style="color: grey; margin-left: 5px; font-weight: 500; font-size: 14px; text-decoration: none solid rgb(135, 135, 135);">Most Helpful Review</p></li>
+						<li style="display: flex; ;"><div class="green-rating">4<img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxMyIgaGVpZ2h0PSIxMiI+PHBhdGggZmlsbD0iI0ZGRiIgZD0iTTYuNSA5LjQzOWwtMy42NzQgMi4yMy45NC00LjI2LTMuMjEtMi44ODMgNC4yNTQtLjQwNEw2LjUuMTEybDEuNjkgNC4wMSA0LjI1NC40MDQtMy4yMSAyLjg4Mi45NCA0LjI2eiIvPjwvc3ZnPg==" alt="" style="height: 10px;" /></div> <p style="margin-left: 5px;">Nice product</p></li>
+						<li>Front Camera is not good . Battery is good . Sound is awesome.</li>
+						<li>Back camera is good . Look is good . Overall performance is good</li>
+						<li></li>
+					</ul>
+
+				</div>
+				<div class="review-box-product-recent-review">
+					<ul class="review-box-menu-recent-view">
+						<li><p style="color: grey; margin-left: 5px; font-weight: 500; font-size: 14px; text-decoration: none solid rgb(135, 135, 135);">Recent Review</p></li>
+						<li style="display: flex;"><div class="orange-rating">4<img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxMyIgaGVpZ2h0PSIxMiI+PHBhdGggZmlsbD0iI0ZGRiIgZD0iTTYuNSA5LjQzOWwtMy42NzQgMi4yMy45NC00LjI2LTMuMjEtMi44ODMgNC4yNTQtLjQwNEw2LjUuMTEybDEuNjkgNC4wMSA0LjI1NC40MDQtMy4yMSAyLjg4Mi45NCA0LjI2eiIvPjwvc3ZnPg==" alt="" style="height: 10px;" /></div> <p style="margin-left: 5px;">Moderate</p></li>
+						<li>Don't take this camera very poor</li>
+						<li></li>
+					</ul>
+				</div>
+			</div>
+
+			<div class="review-box-content">
+				<div class="review-box-img">
+					<img src="/images/-original-imaghkmjtcfc3xgh.webp" alt="">
+				</div>
+				<div class="review-box-product-details">
+					<ul class="review-box-menu">
+						<li style="font-size: 18px; font-weight: 500; text-decoration: none solid rgb(40, 116, 240);">1. REDMI 9 Activ (Carbon Black...</li>
+						<li style="display: flex; ;"><div class="green-rating">4.3 <img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxMyIgaGVpZ2h0PSIxMiI+PHBhdGggZmlsbD0iI0ZGRiIgZD0iTTYuNSA5LjQzOWwtMy42NzQgMi4yMy45NC00LjI2LTMuMjEtMi44ODMgNC4yNTQtLjQwNEw2LjUuMTEybDEuNjkgNC4wMSA0LjI1NC40MDQtMy4yMSAyLjg4Mi45NCA0LjI2eiIvPjwvc3ZnPg==" alt="" style="height: 10px;" /></div> <p style="color: grey; margin-left: 5px; font-weight: 500; font-size: 14px; text-decoration: none solid rgb(135, 135, 135);">3,961 Ratings & 265 Reviews</p></li>
+						<li style="display: flex; "><i class="fa fa-indian-rupee-sign"></i>10,499   <p style="color: grey; padding-left: 10px;">19% off</p></li>
+						<li style="font-size: 14px; font-weight: 400;">6 GB RAM | 128 GB ROM | Expandable Upto 512 GB</li>
+						<li>16.59 cm (6.53 inch) HD+ Display</li>
+						<li></li>
+					</ul>
+
+				</div>
+				<div class="review-box-product-helpfull-review">
+					<ul class="review-box-menu-helpfull-review">
+						<li><p style="color: grey; margin-left: 5px; font-weight: 500; font-size: 14px; text-decoration: none solid rgb(135, 135, 135);">Most Helpful Review</p></li>
+						<li style="display: flex; ;"><div class="green-rating">4<img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxMyIgaGVpZ2h0PSIxMiI+PHBhdGggZmlsbD0iI0ZGRiIgZD0iTTYuNSA5LjQzOWwtMy42NzQgMi4yMy45NC00LjI2LTMuMjEtMi44ODMgNC4yNTQtLjQwNEw2LjUuMTEybDEuNjkgNC4wMSA0LjI1NC40MDQtMy4yMSAyLjg4Mi45NCA0LjI2eiIvPjwvc3ZnPg==" alt="" style="height: 10px;" /></div> <p style="margin-left: 5px;">Nice product</p></li>
+						<li>Front Camera is not good . Battery is good . Sound is awesome.</li>
+						<li>Back camera is good . Look is good . Overall performance is good</li>
+						<li></li>
+					</ul>
+
+				</div>
+				<div class="review-box-product-recent-review">
+					<ul class="review-box-menu-recent-view">
+						<li><p style="color: grey; margin-left: 5px; font-weight: 500; font-size: 14px; text-decoration: none solid rgb(135, 135, 135);">Recent Review</p></li>
+						<li style="display: flex;"><div class="orange-rating">4<img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxMyIgaGVpZ2h0PSIxMiI+PHBhdGggZmlsbD0iI0ZGRiIgZD0iTTYuNSA5LjQzOWwtMy42NzQgMi4yMy45NC00LjI2LTMuMjEtMi44ODMgNC4yNTQtLjQwNEw2LjUuMTEybDEuNjkgNC4wMSA0LjI1NC40MDQtMy4yMSAyLjg4Mi45NCA0LjI2eiIvPjwvc3ZnPg==" alt="" style="height: 10px;" /></div> <p style="margin-left: 5px;">Moderate</p></li>
+						<li>Don't take this camera very poor</li>
+						<li></li>
+					</ul>
+				</div>
+			</div>
+
+			
 		</section>
 		<footer>
 			<div class="footer-menu">
